# fifth

./: Cargo.toml  LICENSE
fifth-web/: Cargo.toml  README.md
fifth-web/src/: lib.rs
miniforth/: Cargo.toml  README.md  hello.fth
miniforth/src/: forth.rs  lib.rs  main.rs  stack.rs
src/: main.rs
web/: index.html
